# hexstody

./: .gitignore  Cargo.toml  Dockerfile  README.md  Rocket.toml  btc-start.sh  default.nix  docker-compose.yml  eth-start.sh  make-docker.sh  operator1-key.prv.pem  operator1-key.pub.pem  operator2-key.prv.pem  operator2-key.pub.pem  regtest.sh  run.sh  runeth.sh  runreg.sh  shell.nix
hexstody-api/: Cargo.toml
hexstody-api/src/: error.rs  lib.rs  state.rs  types.rs
hexstody-api/src/domain/: currency.rs  error.rs  mod.rs
hexstody-btc/: Cargo.toml
hexstody-btc-api/: Cargo.toml
hexstody-btc-api/src/: deposit.rs  events.rs  lib.rs
hexstody-btc-api/src/bitcoin/: address.rs  block.rs  mod.rs  txid.rs
hexstody-btc-client/: Cargo.toml
hexstody-btc-client/src/: client.rs
hexstody-btc/src/: constants.rs  lib.rs  main.rs  state.rs  tests.rs  worker.rs
hexstody-btc/src/api/: error.rs  mod.rs  public.rs  types.rs
hexstody-btc/src/api/types/: block.rs  deposit.rs  mod.rs
hexstody-btc/src/tests/: mod.rs  runner.rs
hexstody-client/: Cargo.toml
hexstody-client/src/: client.rs
hexstody-db/: Cargo.toml  apply_migrations.sh  drop_database.sh  migrate.sh
hexstody-db/migrations/: 0001_create_scheme.sql  0002_create_scheme.sql
hexstody-db/src/: lib.rs  main.rs  queries.rs  state.rs
hexstody-db/src/domain/: currency.rs
hexstody-db/src/state/: btc.rs  error.rs  exchange.rs  mod.rs  network.rs  transaction.rs  user.rs  withdraw.rs
hexstody-db/src/update/: btc.rs  deposit.rs  limit.rs  misc.rs  mod.rs  old.rs  results.rs  signup.rs  withdrawal.rs
hexstody-eth/: Cargo.toml  README.md  Rocket.toml  config.json
hexstody-eth-api/: Cargo.toml
hexstody-eth-api/src/: events.rs  lib.rs
hexstody-eth-api/src/ethereum/: .txid.rs.swp  address.rs  block.rs  mod.rs  txid.rs
hexstody-eth/src/: conf.rs  lib.rs  main.rs  node_calls.rs  state.rs  types.rs  utils.rs  worker.rs
hexstody-eth/src/api/: error.rs  mod.rs  public.rs
hexstody-eth/src/handlers/: accounts.rs  balance.rs  common.rs  mod.rs  sending.rs
hexstody-hot/: Cargo.toml  Rocket.toml  psqlog
hexstody-hot/src/: main.rs  runner.rs  worker.rs
hexstody-hot/src/api/: api_types.rs  mod.rs  operator.rs  public.rs  types.rs  webserver.rs
hexstody-hot/src/api/operator/: mod.rs  types.rs
hexstody-hot/src/api/public/: auth.rs  mod.rs  wallet.rs
hexstody-hot/src/tests/: mod.rs  runner.rs
hexstody-hot/static/js/operator/: script.js
hexstody-hot/static/scripts/operator/: handlebars-helpers.js  jscu.bundle.js
hexstody-hot/static/scripts/page/: common.js  deposit.js  overview.js  signin.js  signup.js
hexstody-hot/static/templates/: balance.html.hbs  deposit.html.hbs  history.html.hbs
hexstody-hot/templates/: base.html.hbs  base_footer_header.html.hbs  deposit.html.hbs  index.html.hbs  nav.html.hbs  overview.html.hbs  signin.html.hbs  signup.html.hbs
hexstody-hot/templates/operator/: base.html.hbs  index.html.hbs
hexstody-invoices/: Cargo.toml
hexstody-invoices/src/: error.rs  lib.rs  routes.rs  storage.rs  types.rs  worker.rs
hexstody-operator/: Cargo.toml
hexstody-operator/src/api/: helpers.rs  mod.rs
hexstody-operator/src/tests/: mod.rs
hexstody-operator/static/components/: AuthorizedContent.js  CurrencySelect.js  ExchangeBalance.js  ExchangeDepositAddress.js  ExchangeRequests.js  ExchangeRequestsTable.js  Fees.js  HotWalletBalance.js  Invites.js  KeyfileInput.js  Liquidity.js  Margins.js  Modal.js  SwapRequests.js  SwapRequestsTable.js  WithdrawalLimits.js  WithdrawalRequests.js  WithdrawalRequestsTable.js
hexstody-operator/static/css/: style.css  styles.css
hexstody-operator/static/html/: index.html
hexstody-operator/static/scripts/: common.js  index.js  jscec.bundle.js  jscu.bundle.js  main.js
hexstody-operator/static/scripts/templates/: changes.html.hbs  invites.html.hbs  inviteslist.html.hbs
hexstody-operator/static/templates/: currency_select.html.hbs  hot_balance.html.hbs  invites.html.hbs  inviteslist.html.hbs  navigation_tabs.html.hbs  withdrawal_limits.html.hbs  withdrawal_requests.html.hbs
hexstody-operator/templates/: base.html.hbs  index.html.hbs
hexstody-public/: Cargo.toml
hexstody-public/src/: lib.rs  tests.rs
hexstody-public/src/api/: auth.rs  helpers.rs  impls.rs  mod.rs  profile.rs  types.rs  wallet.rs
hexstody-public/static/css/: custom_styles.scss  materialdesignicons.min.css  style.css  styles.css  styles.scss
hexstody-public/static/lang/en/: deposit.json  header.json  limits.json  overview-extra.json  overview.json  profile-tabs.json  profile.json  settings.json  sign-in.json  sign-up.json  swap.json  token.json  withdraw.json
hexstody-public/static/lang/ru/: deposit.json  header.json  limits.json  overview-extra.json  overview.json  profile-tabs.json  profile.json  settings.json  sign-in.json  sign-up.json  swap.json  token.json  withdraw.json
hexstody-public/static/scripts/: base64.min.js  bitcoinjs.min.js  common.js  crypto.js  localize.js  request.js  wordlist.js
hexstody-public/static/scripts/page/: common.js  deposit.js  header.js  localize.js  nav.js  overview.js  swap.js  (+6 more)
hexstody-public/static/templates/: balance.html.hbs  deposit.html.hbs  deposit_old.html.hbs  header_unauthorized.html.hbs  history.html.hbs  history_not.html.hbs  history_old.html.hbs  history_test.html.hbs  key.html.hbs  limits.html.hbs  mnemonic.html.hbs  security.html.hbs  settings.html.hbs  signin.html.hbs  signup.html.hbs  token.html.hbs  withdraw-tab.html.hbs
hexstody-public/templates/: base.html.hbs  base_footer_header.html.hbs  base_with_header.html.hbs  deposit.html.hbs  footer.html.hbs  header.html.hbs  nav.html.hbs  nav_old.html.hbs  overview.html.hbs  overview_old.html.hbs  profile.html.hbs  signin.html.hbs  signup.html.hbs  swap.html.hbs  withdraw.html.hbs  withdraw_old.html.hbs
hexstody-runtime-db/: Cargo.toml  README.md
hexstody-runtime-db/src/: lib.rs
hexstody-ticker/: Cargo.toml  README.md
hexstody-ticker-provider/: Cargo.toml  README.md
hexstody-ticker-provider/src/: client.rs
hexstody-ticker/src/: api.rs  client.rs  lib.rs  worker.rs
(+61 files in other folders)
