[workspace]

members = [
    "hexstody-api",
    "hexstody-btc-api",
    "hexstody-btc-client",
    "hexstody-btc-test",
    "hexstody-btc",
    "hexstody-client",
    "hexstody-db",
    "hexstody-eth-client",
    "hexstody-eth",
    "hexstody-operator",
    "hexstody-public",
    "hexstody-hot",
    "hexstody-sig",
    "hexstody-ticker-provider",
    "hexstody-ticker",
    "hexstody-runtime-db",
]
