[package]
name = "hexstody-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
pwhash = "1.0.0"
rocket = { version = "=0.5.0-rc.2", default-features = false, features = ["json", "uuid"] }
rocket_okapi = { git = "https://github.com/ThouCheese/okapi", branch = "feat/rocket0.5-rc.2", features = ["rapidoc", "swagger", "uuid"] }
schemars = { version = "0.8.10", features = ["chrono", "uuid"] }
uuid = "0.8.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
