[package]
name = "hexstody-btc-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin = "0.28.1"
hexstody-btc-api = { path = "../hexstody-btc-api" }
reqwest = { version = "0.11", features = [ "json" ] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
log = "0.4.14"