[package]
name = "hexstody-btc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.19", features = [ "serde" ] }
clap = { version = "3.0.0-rc.4", features = ["derive", "env"] }
dotenv = "0.15.0"
env_logger = { version = "0.9.0" }
futures = "0.3.19"
futures-channel = "0.3"
futures-util = "0.3.19"
hexstody-btc-client = { path = "../hexstody-btc-client" }
hexstody-db = { path = "../hexstody-db" }
log = "0.4.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
uuid = { version = "0.8.2", features = ["v4"]}
rocket = { version = "0.5.0-rc.1", default-features = false, features = ["json"] }
rocket_okapi = { git = "https://github.com/GREsau/okapi", branch = "master", features = ["swagger"]}

[dev-dependencies]
maplit = "1.0.2"
