[package]
name = "hexstody-btc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "hexstody_btc"
path = "src/lib.rs"

[[bin]]
name = "hexstody-btc"
path = "src/main.rs"

[dependencies]
bitcoin = "0.28.1"
bitcoin_hashes = "0.10.0"
bitcoincore-rpc = "0.15.0"
bitcoincore-rpc-json = "0.15.0"
chrono = { version = "0.4.19", features = [ "serde" ] }
clap = { version = "3.0.0-rc.4", features = ["derive", "env"] }
ctrlc = "3.2.2"
dotenv = "0.15.0"
env_logger = { version = "0.9.0" }
futures = "0.3.19"
futures-channel = "0.3"
futures-util = "0.3.19"
hexstody-btc-api = { path = "../hexstody-btc-api" }
hexstody-btc-client = { path = "../hexstody-btc-client" }
hexstody-db = { path = "../hexstody-db" }
log = "0.4.14"
rocket = { version = "=0.5.0-rc.2", default-features = false, features = ["json"] }
rocket_okapi = { git = "https://github.com/ThouCheese/okapi", branch = "feat/rocket0.5-rc.2", features = ["rapidoc", "swagger"] }
schemars = "0.8.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
uuid = { version = "0.8.2", features = ["v4"]}

[dev-dependencies]
hexstody-btc-test = { path = "../hexstody-btc-test" }
nix = "0.24.1"
port-selector = "0.1.4"
tempdir = "0.3.7"