[package]
name = "hexstody-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hexstody-api = { path = "../hexstody-api" }
log = "0.4.14"
reqwest = { version = "0.11", features = [ "json", "cookies" ] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
rocket = { version = "=0.5.0-rc.2", default-features = false, features = [ "json" ] }
p256 = { version = "0.11.1", features = ["serde"] }
base64 = "0.13.0"