[package]
name = "hexstody-db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "hexstody_db"
path = "src/lib.rs"

[[bin]]
name = "hexstody-db"
path = "src/main.rs"

[dependencies]
clap = { version = "3.0.0-rc.4", features = ["derive", "env"] }
dotenv = "0.15.0"
env_logger = { version = "0.9.0" }
log = "0.4.14"
sqlx = { version = "0.5", features = [ "runtime-tokio-rustls", "migrate", "macros", "postgres", "json", "chrono" ] }
tokio = { version = "1", features = ["full"] }