[package]
name = "hexstody-db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "hexstody_db"
path = "src/lib.rs"

[dependencies]
chrono = { version = "0.4.19", features = [ "serde" ] }
clap = { version = "3.0.0-rc.4", features = [ "derive", "env" ] }
dotenv = "0.15.0"
ecdsa = { version = "0.13.4", features = [ "serde", "pem" ] }
env_logger = { version = "0.9.0" }
futures = "0.3.19"
hexstody-api = { path = "../hexstody-api" }
log = "0.4.14"
p256 = "0.10.1"
schemars = "0.8.8"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
sqlx = { version = "0.5", features = [ "runtime-tokio-rustls", "migrate", "macros", "postgres", "json", "chrono" ] }
thiserror = "1.0"
tokio = { version = "1", features = [ "full" ] }
uuid = { version = "0.8", features = [ "serde", "v4" ] }

[dev-dependencies]
maplit = "1.0.2"
sqlx-database-tester = { version = "0.2.0", features = [ "runtime-tokio" ] }