[package]
name = "hexstody-db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "hexstody_db"
path = "src/lib.rs"

[dependencies]
bitcoin = "0.28.1"
bitcoin_hashes = "0.10.0"
chrono = { version = "0.4.19", features = [ "serde" ] }
futures = "0.3.19"
hexstody-api = { path = "../hexstody-api" }
hexstody-auth = { path = "../hexstody-auth" }
hexstody-btc-api = { path = "../hexstody-btc-api" }
log = "0.4.14"
p256 = { version = "0.11.1", features = ["serde"] }
schemars = "0.8.8"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
sqlx = { version = "0.5", features = [ "runtime-tokio-rustls", "migrate", "macros", "postgres", "json", "chrono" ] }
thiserror = "1.0"
tokio = { version = "1", features = [ "full" ] }
uuid = { version = "0.8", features = [ "serde", "v4" ] }
rand_core = { version = "0.6.3", features = ["std"] }

[dev-dependencies]
sqlx-database-tester = { version = "0.2.0", features = [ "runtime-tokio" ] }