[package]
name = "hexstody-eth"
version = "0.1.0"
authors = ["nazgull08 <nazgull08@protonmail.com"]
edition = "2021"


[lib]
name = "hexstody_eth"
path = "src/lib.rs"

[[bin]]
name = "hexstody-eth"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4.19", features = [ "serde" ] }
clap = { version = "^3.1.18", features = ["derive", "env"] }
log = { version = "^0.4.17"}
env_logger = { version = "^0.9.0"}
hex-literal = { version = "^0.3.4"}
schemars = { version = "0.8.10", features = ["chrono", "uuid"] }
secp256k1 = { version = "^0.21", features = ["recovery"]}
serde = { version = "^1.0.137", features = ["derive"] }
serde_json = {version = "^1.0.81", features = ["preserve_order"]}
reqwest = { version = "^0.11", features = [ "json" ] }
rocket = { version = "^0.5.0-rc.2", features = ["default", "json"]}
rocket_db_pools = { version = "^0.1.0-rc.2", features = ["sqlx_postgres"]}
rocket_okapi = { git = "https://github.com/GREsau/okapi", rev = "5cb59b3fddcf24294b4c6110882d89a68eaf01c1", features = [
  "rapidoc",
  "swagger",
  "uuid",
  "rocket_db_pools"
] }
sqlx = { version = "0.5", features = [ "runtime-tokio-rustls", "migrate", "macros", "postgres", "json", "chrono", "offline" ] }
tokio = { version = "1", features = ["full"] }
ureq = { version = "^2.4.0", features = ["json", "charset"] }
web3 = {version = "^0.18.0"}
