[package]
name = "hexstody-hot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
clap = { version = "3.0.0-rc.4", features = ["derive", "env"] }
env_logger = { version = "0.9.0" }
futures = "0.3.19"
futures-channel = "0.3"
futures-util = "0.3.19"
hexstody-db = { path = "../hexstody-db" }
hexstody-api = { path = "../hexstody-api" }
hexstody-btc-api = { path = "../hexstody-btc-api" }
hexstody-btc-client = { path = "../hexstody-btc-client" }
hexstody-eth-client = { path = "../hexstody-eth-client" }
hexstody-public = { path = "../hexstody-public" }
hexstody-operator = { path = "../hexstody-operator" }
hexstody-btc-test = { path = "../hexstody-btc-test" }
hexstody-ticker-provider = { path = "../hexstody-ticker-provider" }
hexstody-ticker = { path = "../hexstody-ticker" }
hexstody-runtime-db = { path = "../hexstody-runtime-db" }
log = "0.4.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.5", features = [
  "runtime-tokio-rustls",
  "migrate",
  "macros",
  "postgres",
  "json",
  "chrono",
] }
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
rocket = { version = "0.5.0-rc.2", default-features = false, features = [
  "json",
  "secrets",
] }
rocket_okapi = { git = "https://github.com/GREsau/okapi", rev = "ddb07a709129b24ed8e106b0fbf576b6ded615ac", features = [
  "rapidoc",
  "swagger",
] }
rocket_dyn_templates = { version = "0.1.0-rc.2", features = ["handlebars"] }
schemars = "0.8.8"
pwhash = "1.0.0"
ctrlc = "3.2.2"
figment = { version = "0.10", features = ["toml", "env"] }
p256 = { version = "0.11.1", features = ["serde"] }
tokio-cron-scheduler = {version = "0.8.0", features = ["signal"]}

[dev-dependencies]
serial_test = "0.8.0"
bitcoin = "0.28.1"
bitcoin_hashes = "0.10.0"
bitcoincore-rpc = "0.15.0"
bitcoincore-rpc-json = "0.15.0"
nix = "0.24.1"
port-selector = "0.1.4"
run_script = "0.9.0"
hexstody-client = { path = "../hexstody-client" }
tempdir = "0.3.7"
anyhow = "1.0"
uuid = { version = "0.8.2", features = ["v4"]}