[package]
name = "hexstody-invoices"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
append_db = { git = "https://github.com/standardsats/append-db" }
async-trait = "0.1.56"
chrono = { version = "0.4.19", features = ["serde"] }
hexstody-api = { path = "../hexstody-api" }
hexstody-auth = { path = "../hexstody-auth" }
log = "0.4.14"
rocket = { version = "=0.5.0-rc.2", default-features = false, features = [
  "json",
  "uuid",
] }
rocket_okapi = { git = "https://github.com/GREsau/okapi", rev = "ddb07a709129b24ed8e106b0fbf576b6ded615ac", features = [
  "rapidoc",
  "swagger",
] }
schemars = { version = "0.8.10", features = ["chrono", "uuid"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
uuid = { version = "0.8", features = [ "serde", "v4" ] }
