[package]
name = "hexstody-operator"
version = "0.1.0"
edition = "2021"

[lib]
name = "hexstody_operator"
path = "src/lib.rs"

[[bin]]
name = "operator-keygen"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
clap = { version = "3.0.0-rc.4", features = ["derive", "env"] }
futures = "0.3.19"
futures-channel = "0.3"
futures-util = "0.3.19"
hexstody-db = { path = "../hexstody-db" }
hexstody-api = { path = "../hexstody-api" }
hexstody-btc-api = { path = "../hexstody-btc-api" }
log = "0.4.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.5", features = [
  "runtime-tokio-rustls",
  "migrate",
  "macros",
  "postgres",
  "json",
  "chrono",
] }
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
p256 = { version = "0.11.0", features = ["pem"] }
pkcs8 = { version = "0.8.0", features = ["pem", "encryption", "std", "pkcs5"] }
rand_core = { version = "0.6.3", features = ["std"] }
rocket = { version = "0.5.0-rc.2", default-features = false, features = [
  "json",
  "secrets",
  "uuid",
] }
okapi = { git = "https://github.com/GREsau/okapi", rev = "65244f0" }
rocket_okapi = { git = "https://github.com/GREsau/okapi", rev = "65244f0", features = [
  "rapidoc",
  "swagger",
  "uuid",
] }
uuid = { version = "0.8.2", features = ["v4"] }
rocket_dyn_templates = { version = "0.1.0-rc.2", features = ["handlebars"] }
schemars = { version = "0.8.8", features = ["uuid"] }
pwhash = "1.0.0"
rpassword = "6.0.1"
figment = { version = "0.10", features = ["toml", "env"] }
hexstody-btc-client = { path = "../hexstody-btc-client" }
base64 = "0.13.0"

[dev-dependencies]