[package]
name = "hexstody-operator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "hexstody_operator"
path = "src/lib.rs"

[[bin]]
name = "operator-keygen"

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
clap = { version = "3.0.0-rc.4", features = ["derive", "env"] }
futures = "0.3.19"
futures-channel = "0.3"
futures-util = "0.3.19"
hexstody-db = { path = "../hexstody-db" }
hexstody-api = { path = "../hexstody-api" }
hexstody-btc-api = { path = "../hexstody-btc-api" }
hexstody-btc-client = { path = "../hexstody-btc-client" }
hexstody-eth-client = { path = "../hexstody-eth-client" }
hexstody-sig = { path = "../hexstody-sig" }
hexstody-runtime-db = { path = "../hexstody-runtime-db" }
hexstody-ticker-provider = { path = "../hexstody-ticker-provider" }
hexstody-ticker = { path = "../hexstody-ticker" }
log = "0.4.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.5", features = [
  "runtime-tokio-rustls",
  "migrate",
  "macros",
  "postgres",
  "json",
  "chrono",
] }
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
p256 = { version = "0.11.1", features = ["pem"] }
pkcs8 = { version = "0.9.0", features = ["pem", "encryption", "std", "pkcs5"] }
rand_core = { version = "0.6.3", features = ["std"] }
rocket = { version = "0.5.0-rc.2", default-features = false, features = [
  "json",
  "secrets",
  "uuid",
] }
okapi = { git = "https://github.com/GREsau/okapi", rev = "ddb07a709129b24ed8e106b0fbf576b6ded615ac" }
rocket_okapi = { git = "https://github.com/GREsau/okapi", rev = "ddb07a709129b24ed8e106b0fbf576b6ded615ac", features = [
  "rapidoc",
  "swagger",
  "uuid",
] }
uuid = { version = "0.8.2", features = ["v4"] }
schemars = { version = "0.8.8", features = ["uuid"] }
pwhash = "1.0.0"
rpassword = "6.0.1"
figment = { version = "0.10", features = ["toml", "env"] }
base64 = "0.13.0"
qrcode-generator = "4.1.6"

[dev-dependencies]
