[package]
name = "hexstody-public"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "hexstody_public"
path = "src/lib.rs"

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
futures = "0.3.19"
futures-channel = "0.3"
futures-util = "0.3.19"
hexstody-db = { path = "../hexstody-db" }
hexstody-api = { path = "../hexstody-api" }
hexstody-btc-api = { path = "../hexstody-btc-api" }
hexstody-btc-client = { path = "../hexstody-btc-client" }
hexstody-eth-client = { path = "../hexstody-eth-client" }
hexstody-runtime-db = { path = "../hexstody-runtime-db" }
hexstody-ticker-provider = { path = "../hexstody-ticker-provider" }
hexstody-ticker = { path = "../hexstody-ticker" }
log = "0.4.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.5", features = [
  "runtime-tokio-rustls",
  "migrate",
  "macros",
  "postgres",
  "json",
  "chrono",
] }
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = [ "json" ] }
rocket = { version = "0.5.0-rc.2", default-features = false, features = [
  "json",
  "secrets",
  "uuid",
] }
rocket_okapi = { git = "https://github.com/GREsau/okapi", rev = "ddb07a709129b24ed8e106b0fbf576b6ded615ac", features = [
  "rapidoc",
  "swagger",
] }
rocket_dyn_templates = { version = "0.1.0-rc.2", features = ["handlebars"] }
schemars = "0.8.8"
pwhash = "1.0.0"
figment = { version = "0.10", features = ["toml", "env"] }
uuid = { version = "0.8.2", features = ["v4"]}
p256 = { version = "0.11.1", features = ["serde"] }
hexstody-sig = { path = "../hexstody-sig" }
qrcode-generator = "4.1.6"
base64 = "0.13.0"

[dev-dependencies]
hexstody-client = { path = "../hexstody-client" }
env_logger = { version = "0.9.0" }
sqlx-database-tester = { version = "0.2.0", features = ["runtime-tokio"] }
