[package]
name = "hexstody-ticker-provider"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hexstody-api = { path = "../hexstody-api" }
reqwest = { version = "0.11", features = [ "json" ] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
log = "0.4.14"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
env_logger = { version = "0.9.0" }
futures = "0.3.19"